--- a/angular.json
+++ b/angular.json
@@ -29,6 +29,7 @@
             "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
               "./node_modules/bootstrap/dist/css/bootstrap.css",
+              "./node_modules/ngx-toastr/toastr.css",
               "src/theme.scss",
               "src/styles.scss"
             ],
