--- a/angular.json
+++ b/angular.json
@@ -30,6 +30,7 @@
             "styles": [
               "./node_modules/bootstrap/dist/css/bootstrap.css",
               "./node_modules/ngx-toastr/toastr.css",
+              "node_modules/material-design-icons/iconfont/material-icons.css",
               "src/theme.scss",
               "src/styles.scss"
             ],
