--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/router": "~13.1.0",
     "bootstrap": "^5.1.3",
     "jquery": "^3.6.0",
+    "material-design-icons": "^3.0.1",
     "ngx-toastr": "^14.2.1",
     "rxjs": "~7.4.0",
     "tslib": "^2.3.0",
